search by doctor name added